--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- CARD PANEL -->
     <section class="section scrollspy" id="menu">
         <div class="row">
-            <div class="col l8 offset-l2 m6">
+            <div class="col l8 offset-l2">
                 <div class="card brown lighten-1">
                     <br>
                     <h3 class="menu center">Menu</h3>
