--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Capuccino</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
@@ -161,7 +161,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Vanilla</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
@@ -171,7 +171,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Affogato</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
@@ -181,7 +181,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Chocolate</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
@@ -191,7 +191,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Chai</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
@@ -201,7 +201,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Macchiato</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
@@ -211,7 +211,7 @@
                             <div class="col l6 m6 s6">
                                 <h2 class="menui">Hazelnut Delight</h2>
                             </div>
-                            <div class="col l2  m2 s2 center hide-on-med-and-down">
+                            <div class="col l2  m2 s2 center hide-on-small-and-down">
                                 <h2 class="menui">..................</h2>
                             </div>
                             <div class="col l4  m4 s4 right-align">
