--- a/index.html
+++ b/index.html
@@ -369,10 +369,10 @@
 <footer class="page-footer brown lighten-1">
     <div class="container">
         <div class="row">
-            <div class="col l9 s12">
+            <div class="col l9 m9 s12">
                 <h5 class="white-text">Social Medias</h5>
             </div>
-            <div class="col l3 offset- s12">
+            <div class="col l3 m3 s12">
                 <ul>
                     <a href="https://www.facebook.com" target="_blank">
                         <i class="fa-brands fa-square-facebook small" style="color:#ffffff"
